fix colour problem where the div became too big

--- a/pages/about.module.css
+++ b/pages/about.module.css
@@ -29,6 +29,7 @@
 
 .black {
     background: #121212;
+    display: inline-flex;
 }
 
 @media only screen and (min-width: 688px) {
